--- a/css/style.css
+++ b/css/style.css
@@ -24,29 +24,14 @@ footer {
     color: #e8e34c;
 }
 
-.sobreNosotros {
-    border: 4px white solid;
-    padding: 10px;
-    margin-left: 40px;
-    width: 500px;
-    display: inline-block;
-}
+
 
 
 /* CAROUSEL */
 
-/* ESTOY PROBANDO MODIFICARLO, PERO ME SACA LO RESPONSIVE SI LO DEJO ACTIVADO */
-
-/* 
-.carousel-item {
-    height: 500px;
-}
-
 .carousel {
-    height: 500px;
-    width: 500px;
-    display: inline-block;
-} */
+    height: 30%;
+}
 
 /* Contacto */
 
@@ -66,12 +51,62 @@ footer {
 /* MENU */
 
 .hamburguesasMenu {
-    height: 200px;
+    height: 10rem;
+    
 }
 
+.animacion {
+    border: #e8e34c 1px solid;
+    height: 100%;
+    background-color: #282a29;
+}
 
+.animacion:hover {
+    height: 105%;
+    width: 105%;
+    transition: height 1s, width 1s;
+}
+
+.animacionDos {
+    border: #e8e34c 1px solid;
+    display: inline-block;
+    padding: 1rem;
+}
 
 
 .enviarPedido {
     margin-bottom: 5px;
 }
+
+
+
+
+
+
+.sobreNosotros {
+    border: 4px white solid;
+    padding: 10px;
+    margin-left: 40px;
+    width: 80%;
+    display: inline-block;
+} 
+
+@media (min-width: 1024px){
+
+    .sobreNosotros {
+        border: 4px white solid;
+        padding: 10px;
+        margin-left: 40px;
+        width: 40%;
+        display: inline-block;
+    } 
+
+    .carousel {
+       display: inline-flex;
+        width: 40%;
+        height: 40%;
+    }
+
+}
+
+
