--- a/scss/_general.scss
+++ b/scss/_general.scss
@@ -7,6 +7,9 @@ html {
         font-family: 'Sono', sans-serif; 
     }
 
-    
+    min-height: 100%;
+    position: relative;
+
+    overflow-x: hidden;
 }
 
