--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,11 @@
 /*FUENTES*/
 @import url("https://fonts.googleapis.com/css2?family=Sono:wght@300&display=swap");
-/*estilos generales*/
+/*VARIABLES*/ /*estilos generales*/
+html {
+  min-height: 100%;
+  position: relative;
+  overflow-x: hidden;
+}
 html body {
   background-color: #282a29;
   color: #f1e74d;
@@ -16,6 +21,12 @@ html body {
 }
 
 /*FOOTER*/
+footer {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40px;
+}
 footer li a {
   text-decoration: none;
   color: #f1e74d;
@@ -62,8 +73,19 @@ footer li a {
   width: 25%;
 }
 
-.cuadroContacto {
-  margin: 2.5rem;
+/*CONTACTO*/
+.border {
+  margin: 15%;
+  margin-top: 3rem;
+  margin-bottom: 3rem;
+}
+.border .cuadroContacto {
+  margin: 0.5rem;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.border .cuadroContacto .enviar {
+  margin-top: 0.5rem;
 }
 
 /*# sourceMappingURL=style.css.map */
