--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -1,5 +1,18 @@
-.cuadroContacto {
+/*CONTACTO*/
+.border {
+    margin: 15%;
+    margin-top: 3rem;
+    margin-bottom: 3rem;
+    .cuadroContacto {
 
-    margin: 2.5rem;
+        margin: 0.5rem;
+        margin-top: 0;
+        margin-bottom: 0;
+
+        .enviar {
+            margin-top: 0.5rem;
+        }
+    
+    }
 
 }
