--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -6,4 +6,8 @@ footer {
             color: $color-fuentes;
         }
     }
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 40px;
 }
