--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,12 +1,9 @@
 /*MENU*/
-.introMenu {
-    height: 5rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+
+
+.titulo {
+    text-decoration: underline;
 }
-
-
 
 .card-body {
     background-color: #414443;
