--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,37 @@ html body {
   font-family: "Sono", sans-serif;
 }
 
+.intro {
+  height: 5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 /*HEADER*/
 .encabezado .logo {
   max-height: 13rem;
 }
-.encabezado .navbar li :hover {
-  color: #f1e74d;
+@media (min-width: 992px) {
+  .encabezado .navbar li a::after {
+    content: "";
+    height: 0.05rem;
+    background: #f1e74d;
+    display: block;
+    transition: width 0.2s ease-in-out;
+    margin: 0 auto;
+  }
+  .encabezado .navbar li a::after {
+    width: 0;
+  }
+  .encabezado .navbar li a:hover::after {
+    width: 100%;
+  }
+}
+@media (max-width: 991px) {
+  .encabezado .navbar li :hover {
+    color: #f1e74d;
+  }
 }
 
 /*FOOTER*/
@@ -33,11 +58,8 @@ footer li a {
 }
 
 /*MENU*/
-.introMenu {
-  height: 5rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
+.titulo {
+  text-decoration: underline;
 }
 
 .card-body {
@@ -50,13 +72,6 @@ footer li a {
 }
 
 /*INICIO*/
-.introIndex {
-  height: 10rem;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
 .contenedor .sobreNosotros {
   border: 0.1rem solid #f1e74d;
   border-radius: 0.6rem;
@@ -67,7 +82,7 @@ footer li a {
   margin-top: 0;
 }
 @media (min-width: 768px) and (max-width: 992px) {
-  .contenedor .sobreNosotros .img {
+  .contenedor .sobreNosotros .logo {
     margin-left: 25%;
     margin-right: 25%;
   }
@@ -77,7 +92,7 @@ footer li a {
 .border {
   margin: 15%;
   margin-top: 3rem;
-  margin-bottom: 3rem;
+  margin-bottom: 0rem;
 }
 .border .cuadroContacto {
   margin: 0.5rem;
@@ -93,6 +108,71 @@ footer li a {
   margin-left: 10%;
   margin-right: 10%;
   margin-top: 2rem;
+}
+
+.eleccion .card {
+  margin-top: 1rem;
+}
+
+.precio {
+  position: absolute;
+  right: 1rem;
+  bottom: 0.5rem;
+}
+
+.borrar {
+  position: absolute;
+  right: 1rem;
+  top: 0.5rem;
+}
+
+.confirmar .btn-one {
+  color: #FFF;
+  transition: all 0.3s;
+  position: relative;
+}
+.confirmar .btn-one span {
+  transition: all 0.3s;
+}
+.confirmar .btn-one::before {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  opacity: 0;
+  transition: all 0.3s;
+  border-top-width: 1px;
+  border-bottom-width: 1px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-color: rgba(255, 255, 255, 0.5);
+  border-bottom-color: rgba(255, 255, 255, 0.5);
+  transform: scale(0.1, 1);
+}
+.confirmar .btn-one:hover span {
+  letter-spacing: 1rem;
+}
+.confirmar .btn-one:hover::before {
+  opacity: 1;
+  transform: scale(1, 1);
+}
+.confirmar .btn-one::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+  transition: all 0.3s;
+  background-color: rgba(255, 255, 255, 0.1);
+}
+.confirmar .btn-one:hover::after {
+  opacity: 0;
+  transform: scale(0.1, 1);
 }
 
 /*# sourceMappingURL=style.css.map */
