--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -1,10 +1,5 @@
 /*INICIO*/
-.introIndex {
-    height: 10rem;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
+
 
 
 .contenedor {
@@ -18,7 +13,7 @@
         margin-top: 0;
 
         @media (min-width: 768px) and (max-width: 992px) {
-            .img {
+            .logo {
                 margin-left: 25%;
                 margin-right: 25%;
             }
