--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,9 @@ footer li a {
     margin-right: 25%;
   }
 }
+.contenedor .sobreNosotros .instagram {
+  color: #f1e74d;
+}
 
 /*CONTACTO*/
 .border {
