--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -18,6 +18,10 @@
                 margin-right: 25%;
             }
         }
+
+        .instagram {
+            color: #f1e74d;
+        }
     }
     
 }
