--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -22,6 +22,13 @@
         .instagram {
             color: #f1e74d;
         }
+
+        .logo {
+            .fotoLogo {
+                max-width: 100%;
+            }
+            
+        }
     }
     
 }
