--- a/css/style.css
+++ b/css/style.css
@@ -78,10 +78,11 @@ footer li a {
   height: max-content;
   padding: 1%;
   padding-top: 2%;
+  padding-bottom: 2%;
   margin: 5%;
   margin-top: 0;
 }
-@media (min-width: 768px) and (max-width: 992px) {
+@media (min-width: 768px) and (max-width: 991px) {
   .contenedor .sobreNosotros .logo {
     margin-left: 25%;
     margin-right: 25%;
